--- a/src/views/dashboard/dashboard.css
+++ b/src/views/dashboard/dashboard.css
@@ -5,3 +5,21 @@ body{
 input {
     padding: 5px 10px;
 }
+
+.datagrid-container {
+    height: 400px;
+    width: 100%;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .datagrid-container {
+      height: 300px;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .datagrid-container {
+      height: 200px;
+    }
+  }
+  
